--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -20,6 +20,11 @@
   "mpAngleUnitMil": "mil",
   "mpAngleUnitMinute": "minuto",
   "mpAltitudeInvalidValueErrorMessage": "Altitude inválida",
+  "mpAttrNameEmpty": "Nome do atributo vazio",
+  "mpAttrNameInvalid": "Nome de atributo com characteres inválidos",
+  "mpAttrNameLabel": "Nome",
+  "mpAttrValueEmpty": "Valor do atributo vazio",
+  "mpAttrValueLabel": "Valor",
   "mpAuthorInvalidValueErrorMessage": "Data/intervalo de data e nome de autor válidos",
   "mpAzimuthAzimuthLabel": "Azimute",
   "mpAzimuthInvalidErrorMessage": "Azimute inválido",
@@ -487,6 +492,7 @@
   "thCommandOptionAltitudeFix": "Ref. 0 (fix)",
   "thCommandOptionAltitudeValue": "Altitude",
   "thCommandOptionAnchors": "Âncoras",
+  "thCommandOptionAttr": "Atributo do usuário",
   "thCommandOptionAuthor": "Autor",
   "thCommandOptionBorder": "Borda",
   "thCommandOptionClip": "Recortar",
