XVIFIle: adding XVI file to TH2

--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -46,6 +46,7 @@
   "mpCommandDescriptionAddLine": "Adicionar linha",
   "mpCommandDescriptionAddLineSegment": "Adicionar segmento de linha",
   "mpCommandDescriptionAddPoint": "Adicionar ponto",
+  "mpCommandDescriptionAddXTherionImageInsertConfig": "Adicionar imagem",
   "mpCommandDescriptionEditAreasType": "Editar tipo de áreas",
   "mpCommandDescriptionEditAreaType": "Editar tipo de área",
   "mpCommandDescriptionEditBezierCurve": "Editar curva Bézier",
@@ -75,6 +76,7 @@
   "mpCommandDescriptionRemoveOptionFromElement": "Remover opção",
   "mpCommandDescriptionRemoveOptionFromElements": "Remover opção de diversos elementos",
   "mpCommandDescriptionRemovePoint": "Apagar ponto",
+  "mpCommandDescriptionRemoveXTherionImageInsertConfig": "Remover imagem",
   "mpCommandDescriptionSetOptionToElement": "Definir opção",
   "mpCommandDescriptionSetOptionToElements": "Definir opção para diversos elementos",
   "mpContextInvalidValueErrorMessage": "Ambos os campos são obrigatórios",
@@ -261,6 +263,7 @@
   "th2FileEditPageAddArea": "Criar área (A)",
   "th2FileEditPageAddAreaStatusBarMessage": "Clique para criar uma área do tipo {type}",
   "th2FileEditPageAddElementOptions": "Criar elemento",
+  "th2FileEditPageAddImageButton": "Adicionar imagem (Ctrl+Alt+I)",
   "th2FileEditPageAddLine": "Criar linha (L)",
   "th2FileEditPageAddLineStatusBarMessage": "Clique para criar uma linha do tipo {type}",
   "th2FileEditPageAddPoint": "Criar ponto (P)",
@@ -292,6 +295,7 @@
   "th2FileEditPageZoomOutFile": "Mostrar arquivo (3)",
   "th2FileEditPageZoomOutScrap": "Mostrar croqui (4)",
   "th2FileEditPageZoomToSelection": "Mostrar seleção (2)",
+  "th2FilePickSelectImageFile": "Selecione um arquivo de imagem",
   "th2FilePickSelectTH2File": "Selecione um arquivo TH2",
   "thAreaBedrock": "Rocha matriz",
   "thAreaBlocks": "Blocos",
