--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -236,6 +236,11 @@
     "description": "The description for the add point command",
     "type": "text"
   },
+  "mpCommandDescriptionAddXTherionImageInsertConfig": "Add image",
+  "@mpCommandDescriptionAddXTherionImageInsertConfig": {
+    "description": "The description for the add XTherion image insert config command",
+    "type": "text"
+  },
   "mpCommandDescriptionEditAreasType": "Edit multiple areas type",
   "@mpCommandDescriptionEditAreasType": {
     "description": "The description for the edit areas type command",
@@ -379,6 +384,11 @@
   "mpCommandDescriptionRemovePoint": "Remove point",
   "@mpCommandDescriptionRemovePoint": {
     "description": "The description for the remove point command",
+    "type": "text"
+  },
+  "mpCommandDescriptionRemoveXTherionImageInsertConfig": "Remove image",
+  "@mpCommandDescriptionRemoveXTherionImageInsertConfig": {
+    "description": "The description for the remove XTherion image insert config command",
     "type": "text"
   },
   "mpCommandDescriptionSetOptionToElement": "Set option",
@@ -1317,6 +1327,11 @@
     "description": "The label for the add element options button",
     "type": "text"
   },
+  "th2FileEditPageAddImageButton": "Add image (Ctrl+Alt+I)",
+  "@th2FileEditPageAddImageButton": {
+    "description": "The label for the add image button",
+    "type": "text"
+  },
   "th2FileEditPageAddLine": "Add line (L)",
   "@th2FileEditPageAddLine": {
     "description": "The label for the add line button",
@@ -1495,6 +1510,11 @@
   "th2FileEditPageZoomToSelection": "Zoom to selection (2)",
   "@th2FileEditPageZoomToSelection": {
     "description": "The label for the zoom to selection button",
+    "type": "text"
+  },
+  "th2FilePickSelectImageFile": "Select an image file",
+  "@th2FilePickSelectImageFile": {
+    "description": "The label for the image file selection dialog",
     "type": "text"
   },
   "th2FilePickSelectTH2File": "Select a TH2 file",
