--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -272,6 +272,7 @@
   "th2FileEditPageChangeActiveScrapTitle": "Alterar croqui ativo",
   "th2FileEditPageChangeImageTitle": "Alterar imagens",
   "th2FileEditPageChangeImageTool": "Alterar imagem (Alt+I)",
+  "th2FileEditPageDeleteImageButton": "Remover imagem (Del)",
   "th2FileEditPageEmptySelectionStatusBarMessage": "Nenhum elemento selecionado",
   "th2FileEditPageLoadingFile": "Lendo arquivo {filename} ...",
   "th2FileEditPageNodeEditTool": "Editar nós (N)",
