XVIFile: xvi file keycoard shortcuts working

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1378,11 +1378,6 @@
     "description": "The label for the change image tool button",
     "type": "text"
   },
-  "th2FileEditPageDeleteImageButton": "Delete image (Del)",
-  "@th2FileEditPageDeleteImageButton": {
-    "description": "The label for the delete image button",
-    "type": "text"
-  },
   "th2FileEditPageEmptySelectionStatusBarMessage": "Empty selection",
   "@th2FileEditPageEmptySelectionStatusBarMessage": {
     "description": "The status bar message for the empty selection",
@@ -1449,6 +1444,11 @@
   "th2FileEditPageRemoveButton": "Remove (Del)",
   "@th2FileEditPageRemoveButton": {
     "description": "The label for the remove tool button",
+    "type": "text"
+  },
+  "th2FileEditPageRemoveImageButton": "Remove image",
+  "@th2FileEditPageRemoveImageButton": {
+    "description": "The label for the remove image button",
     "type": "text"
   },
   "th2FileEditPageSave": "Save (Ctrl+S)",
