--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -272,7 +272,6 @@
   "th2FileEditPageChangeActiveScrapTitle": "Alterar croqui ativo",
   "th2FileEditPageChangeImageTitle": "Alterar imagens",
   "th2FileEditPageChangeImageTool": "Alterar imagem (Alt+I)",
-  "th2FileEditPageDeleteImageButton": "Remover imagem (Del)",
   "th2FileEditPageEmptySelectionStatusBarMessage": "Nenhum elemento selecionado",
   "th2FileEditPageLoadingFile": "Lendo arquivo {filename} ...",
   "th2FileEditPageNodeEditTool": "Editar nós (N)",
@@ -284,6 +283,7 @@
   "th2FileEditPageOptionTool": "Opções (O)",
   "th2FileEditPagePanTool": "Mover ponto de vista",
   "th2FileEditPageRemoveButton": "Apagar (Del)",
+  "th2FileEditPageRemoveImageButton": "Remover imagem",
   "th2FileEditPageSave": "Salvar (Ctrl+S)",
   "th2FileEditPageSaveAs": "Salvar como (Shift+Ctrl+S)",
   "th2FileEditPageRedo": "Refazer '{redoDescription}' (Ctrl+Y)",
