--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -339,6 +339,7 @@
   "thElementStraightLineSegment": "Segmento de linha reta",
   "thElementUnrecognized": "Elemento não reconhecido",
   "thElementXTherionConfig": "Configuração XTherion",
+  "thPLAUserDefined": "Definido pelo usuário",
   "thPointAirDraught": "Corrente de ar",
   "thPointAltar": "Altar",
   "thPointAltitude": "Altitude",
