--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -263,7 +263,7 @@
   "th2FileEditPageAddArea": "Criar área (A)",
   "th2FileEditPageAddAreaStatusBarMessage": "Clique para criar uma área do tipo {type}",
   "th2FileEditPageAddElementOptions": "Criar elemento",
-  "th2FileEditPageAddImageButton": "Adicionar imagem (Ctrl+Alt+I)",
+  "th2FileEditPageAddImageButton": "Adicionar imagem (I)",
   "th2FileEditPageAddLine": "Criar linha (L)",
   "th2FileEditPageAddLineStatusBarMessage": "Clique para criar uma linha do tipo {type}",
   "th2FileEditPageAddPoint": "Criar ponto (P)",
