--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1358,7 +1358,7 @@
       "type": {}
     }
   },
-  "th2FileEditPageChangeActiveScrapTool": "Change active scrap (Alt+C)",
+  "th2FileEditPageChangeActiveScrapTool": "Change active scrap (Alt+S)",
   "@th2FileEditPageChangeActiveScrapTool": {
     "description": "The label for the change active scrap tool button",
     "type": "text"
