--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -107,6 +107,7 @@
   "mpExploredLengthLabel": "Extensão",
   "mpExtendStationLabel": "Base",
   "mpIDInvalidValueErrorMessage": "ID inválido: deve ser uma sequência de caracteres A-Z, a-z, 0-9 e _-/ (não começando com ‘-’).",
+  "mpIDMissingErrorMessage": "ID é obrigatório.",
   "mpIDNonUniqueValueErrorMessage": "IDs devem ser únicos.",
   "mpIDIDLabel": "ID",
   "mpLengthUnitCentimeter": "centímetro",
@@ -268,6 +269,7 @@
   "th2FileEditPageAddLineStatusBarMessage": "Clique para criar uma linha do tipo {type}",
   "th2FileEditPageAddPoint": "Criar ponto (P)",
   "th2FileEditPageAddPointStatusBarMessage": "Clique para criar um ponto do tipo {type}",
+  "th2FileEditPageAddScrapButton": "Adicionar croqui (S)",
   "th2FileEditPageChangeActiveScrapTool": "Alterar croqui ativo (Alt+S)",
   "th2FileEditPageChangeActiveScrapTitle": "Alterar croqui ativo",
   "th2FileEditPageChangeImageTitle": "Alterar imagens",
