Internationalizing add/remove scraps

--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -37,6 +37,7 @@
   "mpAzimuthEastAbbreviation": "L",
   "mpAzimuthWestAbbreviation": "O",
   "mpButtonCancel": "Cancelar",
+  "mpButtonCreate": "Criar",
   "mpButtonOK": "OK",
   "mpChoiceSet": "Definido",
   "mpChoiceUnset": "Não definido",
@@ -46,6 +47,7 @@
   "mpCommandDescriptionAddLine": "Adicionar linha",
   "mpCommandDescriptionAddLineSegment": "Adicionar segmento de linha",
   "mpCommandDescriptionAddPoint": "Adicionar ponto",
+  "mpCommandDescriptionAddScrap": "Adicionar croqui",
   "mpCommandDescriptionAddXTherionImageInsertConfig": "Adicionar imagem",
   "mpCommandDescriptionEditAreasType": "Editar tipo de áreas",
   "mpCommandDescriptionEditAreaType": "Editar tipo de área",
@@ -76,6 +78,7 @@
   "mpCommandDescriptionRemoveOptionFromElement": "Remover opção",
   "mpCommandDescriptionRemoveOptionFromElements": "Remover opção de diversos elementos",
   "mpCommandDescriptionRemovePoint": "Apagar ponto",
+  "mpCommandDescriptionRemoveScrap": "Remover croqui",
   "mpCommandDescriptionRemoveXTherionImageInsertConfig": "Remover imagem",
   "mpCommandDescriptionSetOptionToElement": "Definir opção",
   "mpCommandDescriptionSetOptionToElements": "Definir opção para diversos elementos",
@@ -137,6 +140,9 @@
   "mpNamedScaleLarge": "Grande",
   "mpNamedScaleHuge": "Enorme",
   "mpNameStationLabel": "Base",
+  "mpNewScrapDialogCreateNewScrap": "Criar novo croqui",
+  "mpNewScrapDialogCreateScrapIDLabel": "ID do croqui",
+  "mpNewScrapDialogCreateScrapIDHint": "Digite o identificador do croqui",
   "mpOptionsEditLineSegmentTypes": "Tipos de segmentos de linha",
   "mpPassageHeightCeiling": "Teto",
   "mpPassageHeightCeilingLabel": "Teto",
@@ -286,6 +292,7 @@
   "th2FileEditPagePanTool": "Mover ponto de vista",
   "th2FileEditPageRemoveButton": "Apagar (Del)",
   "th2FileEditPageRemoveImageButton": "Remover imagem",
+  "th2FileEditPageRemoveScrapButton": "Remover croqui",
   "th2FileEditPageSave": "Salvar (Ctrl+S)",
   "th2FileEditPageSaveAs": "Salvar como (Shift+Ctrl+S)",
   "th2FileEditPageSaveAsDialogTitle": "Salvar arquivo TH2 como",
