--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -268,7 +268,7 @@
   "parsingErrors": "Erros na interpretação do arquivo",
   "th2FileEditPageHelpDialogTitle": "Ajuda para edição de arquivo TH2",
   "th2FileEditPageAddArea": "Criar área (A)",
-  "th2FileEditPageAddAreaStatusBarMessage": "Clique para criar uma área do tipo {type}",
+  "th2FileEditPageAddAreaStatusBarMessage": "Selecione uma linha para ser incluída como borda da nova área do tipo {type}",
   "th2FileEditPageAddElementOptions": "Criar elemento",
   "th2FileEditPageAddImageButton": "Adicionar imagem (I)",
   "th2FileEditPageAddLine": "Criar linha (L)",
