--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -15,6 +15,7 @@
   "helpDialogFailureToLoad": "Falha ao carregar o conteúdo de ajuda",
   "helpDialogTooltip": "Ajuda",
   "mapiahHomeHelpDialogTitle": "Tela inicial",
+  "mapiahHomeNewFileButtonTooltip": "Novo arquivo (Ctrl+N)",
   "mpAngleUnitDegree": "grau",
   "mpAngleUnitGrad": "grad",
   "mpAngleUnitMil": "mil",
