Reorganizing translation files

--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -108,6 +108,7 @@
   "mpDistInvalidValueErrorMessage": "Distância inválida",
   "mpDistDistanceLabel": "Distância",
   "mpDoubleValueInvalidValueErrorMessage": "Valor inválido",
+  "mpEncodingLabel": "Codificação",
   "mpExploredLengthLabel": "Extensão",
   "mpExtendStationLabel": "Base",
   "mpIDInvalidValueErrorMessage": "ID inválido: deve ser uma sequência de caracteres A-Z, a-z, 0-9 e _-/ (não começando com ‘-’).",
@@ -330,6 +331,59 @@
   "thAreaSump": "Sifão",
   "thAreaU": "Usuário",
   "thAreaWater": "Água",
+  "thCommandOptionAdjust": "Ajustar",
+  "thCommandOptionAlign": "Alinhar",
+  "thCommandOptionAltitude": "Altitude",
+  "thCommandOptionAltitudeFix": "Ref. 0 (fix)",
+  "thCommandOptionAltitudeValue": "Altitude",
+  "thCommandOptionAnchors": "Âncoras",
+  "thCommandOptionAttr": "Atributo do usuário",
+  "thCommandOptionAuthor": "Autor",
+  "thCommandOptionBorder": "Borda",
+  "thCommandOptionClip": "Recortar",
+  "thCommandOptionClose": "Fechar",
+  "thCommandOptionContext": "Contexto",
+  "thCommandOptionCopyright": "Direitos Autorais",
+  "thCommandOptionCS": "Sistema de Coordenadas",
+  "thCommandOptionDateValue": "Data",
+  "thCommandOptionDimensionsValue": "Dimensões",
+  "thCommandOptionDist": "Distância",
+  "thCommandOptionExplored": "Explorado",
+  "thCommandOptionExtend": "Estender",
+  "thCommandOptionFlip": "Virar",
+  "thCommandOptionFrom": "De",
+  "thCommandOptionHead": "Cabeça",
+  "thCommandOptionId": "ID",
+  "thCommandOptionLengthUnit": "Unidade",
+  "thCommandOptionLineDirection": "Direção",
+  "thCommandOptionLineGradient": "Gradiente",
+  "thCommandOptionLineHeight": "Altura",
+  "thCommandOptionLinePointDirection": "Direção",
+  "thCommandOptionLinePointGradient": "Gradiente",
+  "thCommandOptionLSize": "Tamanho L",
+  "thCommandOptionMark": "Marca",
+  "thCommandOptionName": "Base",
+  "thCommandOptionOutline": "Contorno",
+  "thCommandOptionOrientation": "Orientação",
+  "thCommandOptionPassageHeightValue": "Altura da Passagem",
+  "thCommandOptionPlace": "Lugar",
+  "thCommandOptionPointHeightValue": "Altura do Ponto",
+  "thCommandOptionPLScale": "Escala",
+  "thCommandOptionProjection": "Projeção",
+  "thCommandOptionRebelays": "Rebelays",
+  "thCommandOptionReverse": "Reverter",
+  "thCommandOptionScrap": "Sucata",
+  "thCommandOptionScrapScale": "Escala",
+  "thCommandOptionSketch": "Esboço",
+  "thCommandOptionSmooth": "Suavizar",
+  "thCommandOptionStationNames": "Nomes das estações",
+  "thCommandOptionStations": "Estações",
+  "thCommandOptionSubtype": "Subtipo",
+  "thCommandOptionText": "Texto",
+  "thCommandOptionTitle": "Título",
+  "thCommandOptionUnrecognized": "Opção de Comando Não Reconhecida",
+  "thCommandOptionVisibility": "Visibilidade",
+  "thCommandOptionWalls": "Paredes",
   "thElementArea": "Área",
   "thElementAreaBorderTHID": "ID de borda de área",
   "thElementBezierCurveLineSegment": "Segmento de linha Bézier",
@@ -349,6 +403,67 @@
   "thElementStraightLineSegment": "Segmento de linha reta",
   "thElementUnrecognized": "Elemento não reconhecido",
   "thElementXTherionConfig": "Configuração XTherion",
+  "thLineAbyssEntrance": "Entrada do Abismo",
+  "thLineArrow": "Seta",
+  "thLineBorder": "Borda",
+  "thLineCeilingMeander": "Meandro do Teto",
+  "thLineCeilingStep": "Degrau do Teto",
+  "thLineChimney": "Chaminé",
+  "thLineContour": "Contorno",
+  "thLineDripline": "Linha de Gotejamento",
+  "thLineFault": "Falha",
+  "thLineFixedLadder": "Escada Fixa",
+  "thLineFloorMeander": "Meandro do Piso",
+  "thLineFloorStep": "Degrau do Piso",
+  "thLineFlowstone": "Travertino",
+  "thLineGradient": "Gradiente",
+  "thLineHandrail": "Corrimão",
+  "thLineJoint": "Junta",
+  "thLineLabel": "Rótulo",
+  "thLineLowCeiling": "Teto Baixo",
+  "thLineMapConnection": "Conexão de Mapa",
+  "thLineMoonmilk": "Leite de Lua",
+  "thLineOverhang": "Saliente",
+  "thLinePit": "Poço",
+  "thLinePitch": "Lance",
+  "thLinePitChimney": "Chaminé do Poço",
+  "thLineRimstoneDam": "Dique de Travertino",
+  "thLineRimstonePool": "Piscina de Travertino",
+  "thLineRockBorder": "Borda de Rocha",
+  "thLineRockEdge": "Borda de Rocha",
+  "thLineRope": "Corda",
+  "thLineRopeLadder": "Escada de Corda",
+  "thLineSection": "Seção",
+  "thLineSlope": "Declive",
+  "thLineSteps": "Degraus",
+  "thLineSurvey": "Levantamento",
+  "thLineU": "Usuário",
+  "thLineViaFerrata": "Via Ferrata",
+  "thLineWalkWay": "Passarela",
+  "thLineWall": "Parede",
+  "thLineWaterFlow": "Fluxo de Água",
+  "thMultipleChoiceAdjustHorizontal": "Horizontal",
+  "thMultipleChoiceAdjustVertical": "Vertical",
+  "thMultipleChoiceAlignBottom": "Inferior",
+  "thMultipleChoiceAlignBottomLeft": "Inferior Esquerdo",
+  "thMultipleChoiceAlignBottomRight": "Inferior Direito",
+  "thMultipleChoiceAlignCenter": "Centro",
+  "thMultipleChoiceAlignLeft": "Esquerda",
+  "thMultipleChoiceAlignRight": "Direita",
+  "thMultipleChoiceAlignTop": "Superior",
+  "thMultipleChoiceAlignTopLeft": "Superior Esquerdo",
+  "thMultipleChoiceAlignTopRight": "Superior Direito",
+  "thMultipleChoiceOnOffOff": "Desligado",
+  "thMultipleChoiceOnOffOn": "Ligado",
+  "thMultipleChoiceOnOffAutoAuto": "Automático",
+  "thMultipleChoiceFlipNone": "Nenhum",
+  "thMultipleChoiceArrowPositionBegin": "Início",
+  "thMultipleChoiceArrowPositionBoth": "Ambos",
+  "thMultipleChoiceArrowPositionEnd": "Fim",
+  "thMultipleChoiceLinePointGradientPoint": "Ponto",
+  "thMultipleChoiceOutlineIn": "Dentro",
+  "thMultipleChoiceOutlineOut": "Fora",
+  "thMultipleChoicePlaceDefault": "Padrão",
   "thPointAirDraught": "Corrente de ar",
   "thPointAltar": "Altar",
   "thPointAltitude": "Altitude",
@@ -465,118 +580,5 @@
   "thPointWaterDrip": "Gotejamento de água",
   "thPointWaterFlow": "Fluxo de água",
   "thPointWheelchair": "Cadeira de rodas",
-  "thLineAbyssEntrance": "Entrada do Abismo",
-  "thLineArrow": "Seta",
-  "thLineBorder": "Borda",
-  "thLineCeilingMeander": "Meandro do Teto",
-  "thLineCeilingStep": "Degrau do Teto",
-  "thLineChimney": "Chaminé",
-  "thLineContour": "Contorno",
-  "thLineDripline": "Linha de Gotejamento",
-  "thLineFault": "Falha",
-  "thLineFixedLadder": "Escada Fixa",
-  "thLineFloorMeander": "Meandro do Piso",
-  "thLineFloorStep": "Degrau do Piso",
-  "thLineFlowstone": "Travertino",
-  "thLineGradient": "Gradiente",
-  "thLineHandrail": "Corrimão",
-  "thLineJoint": "Junta",
-  "thLineLabel": "Rótulo",
-  "thLineLowCeiling": "Teto Baixo",
-  "thLineMapConnection": "Conexão de Mapa",
-  "thLineMoonmilk": "Leite de Lua",
-  "thLineOverhang": "Saliente",
-  "thLinePit": "Poço",
-  "thLinePitch": "Lance",
-  "thLinePitChimney": "Chaminé do Poço",
-  "thLineRimstoneDam": "Dique de Travertino",
-  "thLineRimstonePool": "Piscina de Travertino",
-  "thLineRockBorder": "Borda de Rocha",
-  "thLineRockEdge": "Borda de Rocha",
-  "thLineRope": "Corda",
-  "thLineRopeLadder": "Escada de Corda",
-  "thLineSection": "Seção",
-  "thLineSlope": "Declive",
-  "thLineSteps": "Degraus",
-  "thLineSurvey": "Levantamento",
-  "thLineU": "Usuário",
-  "thLineViaFerrata": "Via Ferrata",
-  "thLineWalkWay": "Passarela",
-  "thLineWall": "Parede",
-  "thLineWaterFlow": "Fluxo de Água",
-  "thCommandOptionAdjust": "Ajustar",
-  "thCommandOptionAlign": "Alinhar",
-  "thCommandOptionAltitude": "Altitude",
-  "thCommandOptionAltitudeFix": "Ref. 0 (fix)",
-  "thCommandOptionAltitudeValue": "Altitude",
-  "thCommandOptionAnchors": "Âncoras",
-  "thCommandOptionAttr": "Atributo do usuário",
-  "thCommandOptionAuthor": "Autor",
-  "thCommandOptionBorder": "Borda",
-  "thCommandOptionClip": "Recortar",
-  "thCommandOptionClose": "Fechar",
-  "thCommandOptionContext": "Contexto",
-  "thCommandOptionCopyright": "Direitos Autorais",
-  "thCommandOptionCS": "Sistema de Coordenadas",
-  "thCommandOptionDateValue": "Data",
-  "thCommandOptionDimensionsValue": "Dimensões",
-  "thCommandOptionDist": "Distância",
-  "thCommandOptionExplored": "Explorado",
-  "thCommandOptionExtend": "Estender",
-  "thCommandOptionFlip": "Virar",
-  "thCommandOptionFrom": "De",
-  "thCommandOptionHead": "Cabeça",
-  "thCommandOptionId": "ID",
-  "thCommandOptionLengthUnit": "Unidade",
-  "thCommandOptionLineDirection": "Direção",
-  "thCommandOptionLineGradient": "Gradiente",
-  "thCommandOptionLineHeight": "Altura",
-  "thCommandOptionLinePointDirection": "Direção",
-  "thCommandOptionLinePointGradient": "Gradiente",
-  "thCommandOptionLSize": "Tamanho L",
-  "thCommandOptionMark": "Marca",
-  "thCommandOptionName": "Base",
-  "thCommandOptionOutline": "Contorno",
-  "thCommandOptionOrientation": "Orientação",
-  "thCommandOptionPassageHeightValue": "Altura da Passagem",
-  "thCommandOptionPlace": "Lugar",
-  "thCommandOptionPointHeightValue": "Altura do Ponto",
-  "thCommandOptionPLScale": "Escala",
-  "thCommandOptionProjection": "Projeção",
-  "thCommandOptionRebelays": "Rebelays",
-  "thCommandOptionReverse": "Reverter",
-  "thCommandOptionScrap": "Sucata",
-  "thCommandOptionScrapScale": "Escala",
-  "thCommandOptionSketch": "Esboço",
-  "thCommandOptionSmooth": "Suavizar",
-  "thCommandOptionStationNames": "Nomes das estações",
-  "thCommandOptionStations": "Estações",
-  "thCommandOptionSubtype": "Subtipo",
-  "thCommandOptionText": "Texto",
-  "thCommandOptionTitle": "Título",
-  "thCommandOptionUnrecognized": "Opção de Comando Não Reconhecida",
-  "thCommandOptionVisibility": "Visibilidade",
-  "thCommandOptionWalls": "Paredes",
-  "thMultipleChoiceAdjustHorizontal": "Horizontal",
-  "thMultipleChoiceAdjustVertical": "Vertical",
-  "thMultipleChoiceAlignBottom": "Inferior",
-  "thMultipleChoiceAlignBottomLeft": "Inferior Esquerdo",
-  "thMultipleChoiceAlignBottomRight": "Inferior Direito",
-  "thMultipleChoiceAlignCenter": "Centro",
-  "thMultipleChoiceAlignLeft": "Esquerda",
-  "thMultipleChoiceAlignRight": "Direita",
-  "thMultipleChoiceAlignTop": "Superior",
-  "thMultipleChoiceAlignTopLeft": "Superior Esquerdo",
-  "thMultipleChoiceAlignTopRight": "Superior Direito",
-  "thMultipleChoiceOnOffOff": "Desligado",
-  "thMultipleChoiceOnOffOn": "Ligado",
-  "thMultipleChoiceOnOffAutoAuto": "Automático",
-  "thMultipleChoiceFlipNone": "Nenhum",
-  "thMultipleChoiceArrowPositionBegin": "Início",
-  "thMultipleChoiceArrowPositionBoth": "Ambos",
-  "thMultipleChoiceArrowPositionEnd": "Fim",
-  "thMultipleChoiceLinePointGradientPoint": "Ponto",
-  "thMultipleChoiceOutlineIn": "Dentro",
-  "thMultipleChoiceOutlineOut": "Fora",
-  "thMultipleChoicePlaceDefault": "Padrão"
+  "thProjection": "Projeção"
 }
